--- a/Frontend dataArch/homepage.html
+++ b/Frontend dataArch/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataArch</title>
     <link href='https://fonts.googleapis.com/css?family=Hepta Slab' rel='stylesheet'>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
 
