--- a/Frontend dataArch/index.html
+++ b/Frontend dataArch/index.html
@@ -6,7 +6,7 @@
     <title>DataArch | Data Architecture Solutions</title>
     <meta name="description" content="DataArch helps data-driven businesses unlock greater value through cloud transformation, smart data pipelines, and AI-ready solutions.">
     <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/index-styles.css">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="resources/favicon.png">
 </head>
@@ -21,7 +21,7 @@
             <a href="#">ABOUT</a>
             <a href="#">SERVICES</a>
             <a href="#">BLOG</a>
-            <a href="#">CAREERS</a>
+            <a href="career.html">CAREERS</a>
             <a href="#contact">CONTACT US</a>
         </div>
         <button class="hamburger" aria-label="Toggle menu" onclick="toggleMenu()">
