Some touch ups and corrections

--- a/Frontend dataArch/career.html
+++ b/Frontend dataArch/career.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="job-actions">
-                    <button>View Details</button>
+                    <a href="jobDetails.html"><button>View Details</button></a>
                 </div>
             </li>
             <li tabindex="0" onclick="openJobDetails('Operating Principal')">
