--- a/Frontend dataArch/jobDetails.html
+++ b/Frontend dataArch/jobDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Application - Operations Specialist</title>
-    <link rel="stylesheet" href="jd-styles.css">
+    <link rel="stylesheet" href="style/jd-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
