--- a/Frontend dataArch/index.html
+++ b/Frontend dataArch/index.html
@@ -17,12 +17,12 @@
             <span class="logo-text">DataArch</span>
         </div>
         <div class="nav-links">
-            <a href="#" class="active">HOME</a>
-            <a href="#">ABOUT</a>
-            <a href="#">SERVICES</a>
-            <a href="#">BLOG</a>
-            <a href="career.html">CAREERS</a>
-            <a href="#contact">CONTACT US</a>
+            <a href="index.html" class="">Home</a> <!-- No active class here -->
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="blog.html" class="active">Blog</a> <!-- Active class for Blog -->
+            <a href="career.html">Careers</a>
+            <a href="#contact">Contact Us</a>
         </div>
         <button class="hamburger" aria-label="Toggle menu" onclick="toggleMenu()">
             <span></span>
