--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,10 +17,10 @@
             <span class="logo-text">DataArch</span>
         </div>
         <div class="nav-links">
-            <a href="index.html" class="">Home</a> <!-- No active class here -->
+            <a href="index.html" class="active">Home</a> <!-- No active class here -->
             <a href="#">About</a>
             <a href="#">Services</a>
-            <a href="blog.html" class="active">Blog</a> <!-- Active class for Blog -->
+            <a href="blog.html">Blog</a> <!-- Active class for Blog -->
             <a href="career.html">Careers</a>
             <a href="#contact">Contact Us</a>
         </div>
